@@ -1,6 +1,6 @@
 config BR2_PACKAGE_WGET
 	bool "wget"
 	help
-	  Network utility to retrieve files from http/ftp/etc...
+	  Network utility to retrieve files from http, https and ftp.
 
-	  http://wget.sunsite.dk/
+	  http://www.gnu.org/software/wget/
